--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         <div class="pro-img"></div>
         <div class="pro-img"></div>
         <div class="pro-img"></div>
-
+    </div>
+    <div id="main-content">
         <h2>Using Extends</h2>
-        <p>One other thing to note in the Layout example is the
-            naming convention that I have used.</p>
-        <p>One other thing to note in the Layout example is the
-            naming convention that I have used.</p>
-        <p>One other thing to note in the Layout example is the
-            naming convention that I have used.</p>
-        <p>One other thing to note in the Layout example is the
-            naming convention that I have used.</p>
+        <div class="alert">One other thing to note in the Layout examdivle is the
+            naming convention that I have used.</div>
+        <div class="success">One other thing to note in the Layout example is the
+            naming convention that I have used.</div>
+        <div class="warning">One other thing to note in the Layout example is the
+            naming convention that I have used.</div>
+        <div class="oh-dang">One other thing to note in the Layout example is the
+            naming convention that I have used.</div>
     </div>
 </body>
 
